--- a/htdocs/css/fontello.css
+++ b/htdocs/css/fontello.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.woff2?94322747') format('woff2'),
-       url('../font/fontello.woff?94322747') format('woff'),
-       url('../font/fontello.ttf?94322747') format('truetype'),
-       url('../font/fontello.svg?94322747#fontello') format('svg');
+  src: url('../font/fontello.woff2?54939146') format('woff2'),
+       url('../font/fontello.woff?54939146') format('woff'),
+       url('../font/fontello.ttf?54939146') format('truetype'),
+       url('../font/fontello.svg?54939146#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?94322747#fontello') format('svg');
+    src: url('../font/fontello.svg?54939146#fontello') format('svg');
   }
 }
 */
@@ -61,6 +61,7 @@
 .icon-mail:before { content: '\e805'; } /* '' */
 .icon-link:before { content: '\e806'; } /* '' */
 .icon-award:before { content: '\e807'; } /* '' */
+.icon-tag:before { content: '\e808'; } /* '' */
 .icon-vote:before { content: '\f0dc'; } /* '' */
 .icon-question:before { content: '\f128'; } /* '' */
 .icon-answer:before { content: '\f12a'; } /* '' */
