--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     margin: 0;
-    padding: 0 1em;
+    padding: 0;
     color: #000;
     background: #000 url('../img/bg.jpg') center top/cover no-repeat fixed;
     font-family: "Source Sans Pro", sans-serif;
@@ -20,146 +20,7 @@ body {
 .wrap {
     max-width: 1200px;
     margin: 1em auto;
-    border-radius: 3px;
-    overflow: hidden;
-}
-
-header {
-    background-color: #fff;
-    background-color: rgba(255, 255, 255, .9);
-    display: flex;
-    justify-content: space-between;
-}
-
-.logo {
     padding: 0 1em;
-    display: flex;
-    align-items: center;
-}
-
-.navbar {
-    color: #000;
-    z-index: 10;
-}
-
-.navbar > ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    overflow: hidden;
-}
-
-.navbar > ul a {
-    color: #025;
-    text-decoration: none;
-    text-shadow: none;
-}
-
-.navbar > ul > li {
-    float: left;
-    margin: 0;
-    display: block;
-}
-
-.navbar > ul > li > a {
-    padding: 1em 1.5em;
-    display: inline-block;
-    transition: background-color .3s ease-in-out;
-}
-
-.navbar > ul > li:hover > a,
-.navbar > ul > li.open > a {
-    background-color: #fafcff;
-}
-
-.navbar > ul li.active > a {
-    color: #fff;
-    background-color: #247;
-}
-
-.navbar > ul li.sub > a::after {
-    content: "+";
-    position: relative;
-    margin-left: .75em;
-    margin-right: -.25em;
-    font-weight: 400;
-    display: inline-block;
-    transform: scale(1.25);
-    transition: transform .3s ease-in-out;
-}
-
-.navbar > ul ul li.sub > a::after {
-    float: right;
-    margin-right: 0;
-}
-
-.navbar > ul li.sub.open > a::after {
-    transform: rotate(45deg) scale(1.25);
-}
-
-.navbar > ul li.open > ul {
-    visibility: visible;
-    opacity: 1;
-}
-
-.navbar > ul ul > li {
-    margin: 0;
-    display: block;
-}
-
-.navbar > ul ul > li > a {
-    padding: 1em 1.5em;
-    background-color: #fff;
-    background-color: rgba(255, 255, 255, .9);
-    display: block;
-}
-
-.navbar > ul ul > li:not(.active):hover > a {
-    background-color: #fafcff;
-}
-
-.navbar-user {
-    display: inline-block;
-    vertical-align: top;
-}
-
-.navbar-user > span {
-    max-width: 100px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    display: inline-block;
-    vertical-align: top;
-    overflow: hidden;
-}
-
-main {
-    min-height: 40em;
-    padding: 1.5em;
-    background-color: #fff;
-    background-color: rgba(255, 255, 255, .9);
-}
-
-article {
-    overflow: hidden;
-}
-
-article > *:last-child {
-    margin-bottom: 0;
-}
-
-footer {
-    padding: 1em 1.5em;
-    background-color: #fff;
-    background-color: rgba(255, 255, 255, .9);
-    text-align: center;
-}
-
-footer > p {
-    margin-bottom: .5em;
-}
-
-footer > p:last-child {
-    margin-bottom: 0;
 }
 
 a {
@@ -242,9 +103,10 @@ img {
 h1 {
     margin: -.5rem 0 .5em;
     font-family: Iceland, sans-serif;
-    font-size: 4.5em;
+    font-size: 3.5em;
     font-weight: 400;
     line-height: 1;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, .75);
     text-overflow: ellipsis;
     overflow: hidden;
 }
@@ -265,6 +127,7 @@ h2 {
     font-size: 2.5em;
     font-weight: 400;
     line-height: 1;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, .75);
 }
 
 h2::after {
@@ -283,6 +146,7 @@ h3 {
     font-size: 1.75em;
     font-weight: 400;
     line-height: 1;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, .75);
 }
 
 h4 {
@@ -372,7 +236,7 @@ input[type=submit]:hover,
 input[type=reset]:hover,
 button:hover,
 a.btn:hover {
-    text-shadow: 0 0 2px rgba(255, 255, 255, .4);
+    text-shadow: 0 0 2px rgba(255, 255, 255, .45);
 }
 
 input[type=button].input-small,
@@ -428,6 +292,158 @@ label {
 
 label + select {
     margin-left: .5em;
+}
+
+header {
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, .9);
+    border-radius: 3px;
+}
+
+.logo {
+    padding: 0 1em;
+    display: flex;
+    align-items: center;
+}
+
+.logo > a {
+    color: #247;
+    font-family: Iceland, sans-serif;
+    font-size: 2em;
+    text-decoration: none;
+    text-shadow: 1px 1px 2px #000;
+}
+
+.navbar {
+    color: #000;
+    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar > ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.navbar > ul a {
+    color: #025;
+    font-weight: 600;
+    text-decoration: none;
+    text-shadow: none;
+}
+
+.navbar > ul > li {
+    float: left;
+    position: relative;
+    margin: 0;
+    display: block;
+}
+
+.navbar > ul > li > a {
+    padding: 1em 1.5em;
+    display: inline-block;
+    transition: background-color .3s ease-in-out;
+}
+
+.navbar > ul > li:hover > a {
+    background-color: #fafcff;
+}
+
+.navbar > ul > li.open > a {
+    background-color: #fff;
+}
+
+.navbar > ul li.active > a {
+    color: #fff;
+    background-color: #247;
+}
+
+.navbar > ul li.sub > a::after {
+    content: "+";
+    position: relative;
+    margin-left: .75em;
+    margin-right: -.25em;
+    font-weight: 400;
+    display: inline-block;
+    transform: scale(1.5);
+    transition: transform .3s ease-in-out;
+}
+
+.navbar > ul ul li.sub > a::after {
+    float: right;
+    margin-right: 0;
+}
+
+.navbar > ul li.sub.open > a::after {
+    transform: rotate(45deg) scale(1.5);
+}
+
+.navbar > ul li.open > ul {
+    visibility: visible;
+    opacity: 1;
+}
+
+.navbar > ul ul > li {
+    margin: 0;
+    display: block;
+}
+
+.navbar > ul ul > li > a {
+    padding: 1em 1.5em;
+    background-color: #fff;
+    display: block;
+}
+
+.navbar > ul ul > li:not(.active):hover > a {
+    background-color: #fafcff;
+}
+
+.navbar-user {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.navbar-user > span {
+    max-width: 100px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+main {
+    min-height: 40em;
+    padding: 1.5em;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, .9);
+    border-radius: 3px;
+}
+
+article {
+    overflow: hidden;
+}
+
+article > *:last-child {
+    margin-bottom: 0;
+}
+
+footer {
+    padding: 1em 1.5em;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, .9);
+    border-radius: 3px;
+    text-align: center;
+}
+
+footer > p {
+    margin-bottom: .5em;
+}
+
+footer > p:last-child {
+    margin-bottom: 0;
 }
 
 .spacer {
@@ -507,18 +523,17 @@ article > .columns:last-child {
     padding: .75em 1em;
     color: #34803f;
     background-color: #ecf4ed;
-    background-color: rgba(52, 128, 63, .09);
-    border: 2px solid #34803f;
+    border: 1px solid #34803f;
     border-radius: 3px;
-    font-weight: 600;
     display: inline-block;
+    box-shadow: 0 0 5px #34803f inset;
 }
 
 .msg.err > div {
     color: #9c2c30;
     background-color: #f6ecec;
-    background-color: rgba(156, 44, 48, .09);
     border-color: #9c2c30;
+    box-shadow: 0 0 5px #9c2c30 inset;
 }
 
 .msg ul,
@@ -1096,10 +1111,17 @@ li:last-child .comment,
         max-width: 200px;
         margin: 0;
         padding: 0;
+        border-radius: 0 3px 3px 3px;
         visibility: hidden;
+        overflow: hidden;
         opacity: 0;
         z-index: 10;
         transition: opacity .3s ease-in-out, visibility .3s ease-in-out;
+    }
+    
+    .navbar > ul > li:last-child > ul {
+        right: 0;
+        border-radius: 3px 0 3px 3px;
     }
     
     .navbar > ul ul ul {
@@ -1109,6 +1131,14 @@ li:last-child .comment,
     
     .navbar > ul ul li.sub > a::after {
         content: ">";
+    }
+    
+    .navbar > ul > li:last-child > a {
+        border-radius: 0 3px 3px 0;
+    }
+    
+    .navbar > ul > li.open:last-child > a {
+        border-radius: 0 3px 0 0;
     }
     
     .navbar > ul > li:last-child ul ul {
