--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1115,12 +1115,14 @@ li:last-child .comment,
         overflow: hidden;
         opacity: 0;
         z-index: 10;
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, .25);
         transition: opacity .3s ease-in-out, visibility .3s ease-in-out;
     }
     
     .navbar > ul > li:last-child > ul {
         right: 0;
         border-radius: 3px 0 3px 3px;
+        box-shadow: -2px 2px 2px rgba(0, 0, 0, .25);
     }
     
     .navbar > ul ul ul {
